<resources>
    <string name="app_name">Super</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="apikey">AIzaSyA8-61VFraVm5gMFyexKblkNw8zbJvH8sI</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="history">history</string>
    <string name="logout">logout</string>
    <string name="i_m_a_driver">I\'m a Driver</string>
    <string name="i_m_a_customer">I\'m a Customer</string>
    <string name="background">Background</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="registration">registration</string>
    <string name="from_to">From - To</string>
    <string name="distance">distance</string>
    <string name="date">date</string>
    <string name="call_uber">call Uber</string>
    <string name="truck">truck</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="start_ride">Start Ride</string>
    <string name="search_location">Search Location</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm">confirm</string>
    <string name="back">back</string>
</resources>